--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,11 @@
-{}
+"headers": [
+  {
+    "source": "**",
+    "headers": [
+      {
+        "key": "Cross-Origin-Opener-Policy",
+        "value": "same-origin-allow-popups"
+      }
+    ]
+  }
+]
