--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,11 @@
-"headers": [
-  {
-    "source": "**",
-    "headers": [
+{
+  "hosting": {
+    "public": "https://dabubble-380.developerakademie.net/",
+    "rewrites": [
       {
-        "key": "Cross-Origin-Opener-Policy",
-        "value": "same-origin-allow-popups"
+        "source": "**",
+        "destination": "/index.html"
       }
     ]
   }
-]
+}
