lazy loading for devspace, thread, chat und main header in main-content; css nano and css purify integration

--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,12 @@
           },
           "configurations": {
             "production": {
+              "sourceMap": false,
+              "optimization": {
+                "scripts": true,
+                "styles": true,
+                "fonts": true
+              },
               "budgets": [
                 {
                   "type": "initial",
