--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "dabubble",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "purifycss": "purifycss ./dist/**/*.html ./dist/**/*.js --minify --output ./dist/styles.css",
+    "build-and-purify": "ng build --configuration production && npm run purifycss"
   },
   "private": true,
   "dependencies": {
@@ -32,12 +33,14 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
+    "cssnano": "^7.0.6",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "purify-css": "^1.1.9",
     "typescript": "~5.5.2"
   }
 }
