--- a/angular.json
+++ b/angular.json
@@ -41,6 +41,7 @@
           "configurations": {
             "production": {
               "sourceMap": false,
+
               "optimization": {
                 "scripts": true,
                 "styles": true,
@@ -49,13 +50,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "1MB",
+                  "maximumError": "1.5MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "maximumWarning": "12.40kB",
+                  "maximumError": "14kB"
                 }
               ],
               "outputHashing": "all"
